--- a/QuizApi/appsettings.json
+++ b/QuizApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QuizDb": "Host=localhost;Database=quizdb;Port=5432;Username=postgres;Password=superuser;" // Host=localhost;Database=quizdb;Port=5432;Username=postgres;Password=superuser;""//"Host= dpg-cj7s7iljeehc739jh1ag-a.oregon-postgres.render.com; Database= quizdb_724g; Port = 5432; Username= superuser ; Password=bN8fhPECj7iKRKQOpFgpRscBoQf0xMCb; " 
+    "QuizDb": "Host=localhost;Database=quizdb;Port=5432;Username=postgres;Password=superuser;" 
   }
 }
